@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Nov 2008; lebarjack <francois.perichon@univ-lille2.fr>
+  -davical-0.9.5.2.ebuild, -files/postinstall-en-0.9.5.txt,
+  +davical-0.9.6.1.ebuild, +files/postinstall-en-0.9.6.1.txt:
+  New version
+
   16 Sep 2008; lebarjack <francois.perichon@univ-lille2.fr>
   -davical-0.9.5.ebuild, +davical-0.9.5.2.ebuild, -files/driver_ldap.patch:
   New version for davical (Ex-rscds)
